--- a/CenaPlus.Cloud.Entity/CenaPlus.Cloud.Entity.csproj
+++ b/CenaPlus.Cloud.Entity/CenaPlus.Cloud.Entity.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CloudServer.cs" />
+    <Compile Include="Contest.cs" />
     <Compile Include="EmailForbidden.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
