--- a/CenaPlus.Cloud.Entity/CenaPlus.Cloud.Entity.csproj
+++ b/CenaPlus.Cloud.Entity/CenaPlus.Cloud.Entity.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +45,7 @@
     <Compile Include="CloudServer.cs" />
     <Compile Include="Contest.cs" />
     <Compile Include="EmailForbidden.cs" />
+    <Compile Include="Rating.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
