--- a/CenaPlus.Entity/CenaPlus.Entity.csproj
+++ b/CenaPlus.Entity/CenaPlus.Entity.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.ServiceModel.Activities" />
     <Reference Include="System.ServiceModel.Channels" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -56,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Config.cs" />
     <Compile Include="Contest.cs" />
+    <Compile Include="DetectLanguage.cs" />
     <Compile Include="HackResult.cs" />
     <Compile Include="ProblemGeneral.cs" />
     <Compile Include="ProblemStatistics.cs" />
